[metadata]
name = distrax
version = 0.0.1
description= A fast and scalable deployment tool to create quick and efficient storage systems onto high-performance computing (HPC) compute nodes utilising the compute nodes system memory/storage.
long_description = file: README.md, LICENSE
url = https://rosalindfranklininstitute.github.io/DisTRaX/
project_urls =
    source = https://github.com/rosalindfranklininstitute/distrax
    documentation = https://rosalindfranklininstitute.github.io/DisTRaX/

author = Gabryel Mason-Williams
author_email = gabryel.mason-williams@rfi.ac.uk
license = Apache License, Version 2.0
classifiers =
    License :: OSI Approved :: Apache License, Version 2.0
    Natural Language :: English
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux

[options]
packages = find:
scripts =
    scripts/distrax
    scripts/distrax_mpi
zip_safe = False
python_requires = >=3.7

[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
where=src
include=distrax*  # * by default
exclude =
    docs*
    tests*

[options.extras_require]
MPI =
    mpi4py
    mpi
